--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "test-util"
+name = "adtest"
 version = "0.1.0"
 edition = "2021"
 
@@ -9,6 +9,10 @@ edition = "2021"
 proc-macro = true
 
 [dependencies]
-proc-macro2 = { version = "1.0.67", features = ["nightly"] }
+proc-macro2 = "1.0.67"
 quote = "1.0.33"
 syn = { version = "2.0.37", features = ["full", "extra-traits"] }
+
+[dev-dependencies]
+tokio = { version = "1.32.0", features = ["full"] }
+trybuild = "1.0.85"
