--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -38,14 +38,16 @@ jobs:
 
       - uses: Swatinem/rust-cache@v2
 
-      - name: Install diesel cli
+      - name: Install cargo llvm
         run: cargo install cargo-llvm-cov
 
       - name: Run tests
-        run: cargo llvm-cov --json --output-path coverage.json
+        run: cargo llvm-cov --codecov --output-path coverage
 
       - name: Upload to codecov.io
         uses: codecov/codecov-action@v3
         with:
           token: ${{secrets.CODECOV_TOKEN}}
           verbose: true
+          files: coverage
+          search: false
