added workflow for publishing crate

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,11 +2,9 @@ name: Rust
 
 on:
   push:
-    branches: ["master"]
-    
-
-env:
-  CARGO_TERM_COLOR: always
+    branches:
+      - "master"
+  pull_request:
 
 jobs:
   clippy:
