--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,11 @@
 name = "adtest"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+repository = "https://github.com/0xMimir/adtest"
+authors = ["Mimir <mimirz@proton.me>"]
+description = "Library for better test generation"
+keywords = ["tests"]
+license = "MIT"
 
 [lib]
 proc-macro = true
@@ -12,7 +15,7 @@ proc-macro = true
 proc-macro2 = "1.0.67"
 quote = "1.0.33"
 syn = { version = "2.0.37", features = ["full", "extra-traits"] }
-trybuild = "1.0.71"
 
 [dev-dependencies]
 tokio = { version = "1.32.0", features = ["full"] }
+trybuild = "1.0.71"
